kubernetes/apps/external/classquiz/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: classquiz
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
